C2 failed: Not monotonic (AndI CastII LShiftI) in TestShiftCastAndNotification.java

XMLWordPrintable

    • b24

      Probably related to JDK-8306042.


        33 ConI === 0 [[ 44 455 447 ]] #int:3
       456 CastII === 421 219 [[ 455 ]] #int unconditional dependency
       455 AndI === _ 456 33 [[ 338 ]] !orig=[240],[291] !jvms: TestShiftCastAndNotification::test @ bci:49 (line 48)
      told = int:0
      tnew = top
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (.../open/src/hotspot/share/opto/phaseX.cpp:1935), pid=880014, tid=880031
      # fatal error: Not monotonic
      #
      # JRE version: Java(TM) SE Runtime Environment (21.0) (fastdebug build 21-internal-LTS-2023-05-08-0649543.emanuel.peter.fork4-jdk)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-internal-LTS-2023-05-08-0649543.emanuel.peter.fork4-jdk, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
      # Problematic frame:
      # V [libjvm.so+0x137dcb0] PhaseCCP::verify_type(Node*, Type const*, Type const*)+0x1bc

            Assignee:
            Emanuel Peter
            Reporter:
            Emanuel Peter
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: