8307619: C2 failed: Not monotonic (AndI CastII LShiftI) in TestShiftCastAndNotification.java